# arcparse

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python.yml
arcparse/: __init__.py  _argument_helpers.py  _arguments.py  _parser.py  _partial_arguments.py  _typehints.py  _validations.py  argument.py  arguments.py  converters.py  errors.py  parser.py  subparser.py  typehints.py  validations.py
examples/: basic.py  conversion.py  flag.py  inheritance.py  multiple.py  mutual_exclusion.py  override.py  presence_validation.py  subparsers.py
tests/: test_arcparse.py  test_auto_converter.py  test_converter.py  test_defaults.py  test_dict_helpers.py  test_dynamic_defaults.py  test_examples.py  test_flag.py  test_inheritance.py  test_invalid.py  test_multiple.py  test_mutual_exclusion.py  test_name_override.py  test_option.py  test_override.py  test_parser_inheritance.py  test_positional.py  test_presence_validations.py  test_protocol.py  test_readme.py  test_retroactive_default.py  test_short.py  test_subparsers.py  test_valid.py
